--- a/tariff.html
+++ b/tariff.html
@@ -14,7 +14,7 @@
 	<title>NPR tarief info</title>
 </head>
 <body>
-	<center><img src="https://1.bp.blogspot.com/-CI0ixw3huxc/UJJrcgrbqxI/AAAAAAAAI0Y/YbuxzWg71YY/s1600/NPR+logo+100jpg.jpg" /></center>
+	<center><img src="https://www.cm.nl/images/clients/parkmobile.png" /></center>
 
 	<center><a href="index.html">Home</a> - <a href="info.html">Raw</a> - <a href="tariff.html">Tariff</a></center>
 	
