--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<!-- <script src="servicehuis.js"></script> -->
 	<!-- <script src="D:\Repos\ServiceHuis\ServiceHuis\dist\servicehuis.js"></script> -->
-	<script src="https://cdn.rawgit.com/sboulema/ServiceHuis/00538add5cb21e2d773260b9cdf3849eec9bfbe8/ServiceHuis/dist/serviceHuis.min.js"></script>"
+	<script src="https://cdn.rawgit.com/sboulema/ServiceHuis/00538add5cb21e2d773260b9cdf3849eec9bfbe8/ServiceHuis/dist/serviceHuis.min.js"></script>
 	
 	<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" />
@@ -21,17 +21,7 @@
 	<link rel="shortcut icon" href="https://nationaalparkeerregister.nl/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
-	<center><img src="https://www.cm.nl/images/clients/parkmobile.png" /></center>
 
-	<center><a href="index.html">Home</a> - <a href="info.html">Raw</a> - <a href="tariff.html">Tariff</a></center>
-	
-	<select id="selectArea"></select>
-	
-	<table id="tariffTable" class="display">
-		<thead><tr><th>City</th><th>Tariff</th><th>CultureInfoId</th><th>ZoneCode</th><th>ZoneGroup</th><th>ZoneDescription</th><th>DayCode</th><th>SortOrder</th></tr></thead>
-	</table>
-	
-	<script>
 		var table = [];
 		var verkooppunten = [];
 		var dataTable;
